VME-1130: Ribbon CTA fixed section in blog articles (over the cookie bar) has been added. She has settings for text (+general, +private) and visibility (only private). VME-1132: Update for cookie bar layout. At adding ribbon CTA was updated cookie bar layout and both are united in one block element.

--- a/theme/assets/css/bundles/main.css
+++ b/theme/assets/css/bundles/main.css
@@ -5786,15 +5786,20 @@ code {
     color: white;
 }
 
+.footer-ribbon {
+    position: fixed;
+    bottom: 0;
+    z-index: 5000;
+}
+
+.blog-ribbon {
+    background-color: #F5F5F5;
+    font-weight: 300;
+}
+
 .cookie-bar {
     background: #f0f0f0;
-    bottom: 0;
     font-size: .875rem;
-    left: 0;
-    padding: .625rem;
-    position: fixed;
-    right: 0;
-    z-index: 5000;
 }
 
 .cookie-bar a[href] {
@@ -5890,6 +5895,16 @@ code {
 
 .overflow-auto {
     overflow: auto;
+}
+
+.w-100 {
+    width: 100% !important;
+}
+
+@media (min-width: 576px) {
+    .w-sm-auto {
+        width: auto !important;
+    }
 }
 
 .section {
